<resources>
    <string name="app_name">BSC - Bandar Lampung Sport Center</string>
    <string name="title_home">Home</string>
    <string name="title_field">Lapangan</string>
    <string name="title_transaction">Transaksi</string>
    <string name="title_account">Akun</string>

    <!-- Title Section -->
    <string name="bsc">BSC (Bandar Lampung Sport Center) Futsal</string>
    <string name="link_google_map">Link Google Map</string>
    <string name="jam_buka">Jadwal Buka</string>
    <string name="price_today">Harga Sewa Perjam Hari Ini</string>
    <string name="for_you">Untuk Kamu</string>
    <string name="info">Informasi dan Promosi</string>
    <string name="field_list">Data Lapangan</string>
    <string name="list_transaction">Data Transaksi</string>
    <string name="booking_field">Pengajuan Sewa</string>
    <string name="booking_detail">Detail Sewa</string>

    <!-- Content -->
    <string name="bsc_description">Merupakan salah satu lapangan futsal yang berada di Kota Bandar Lampung. Tempat ini menyediakan lapangan dengan standar mengukuti aturan futsal rules, mulai dari garis lapangan, luas lapangan futsal dan lainnya. Lapangan tersedia dengan kualitas terbaik dengan rumput sintetis, dilengkapi pula bola futsal / futsal ball hingga mini kantin. Anda hanya perlu membawa peralatan futsal Anda (equipment). berlokasi di Jl. Jati, Tj. Gading, Tj. Karang Tim. Kota Bandar Lampung.</string>
    <string name="google_map">https://goo.gl/maps/6pft7dPAeEtsFMMR8</string>
    <string name="opened">Setiap hari, Jam 08:00 - 24:00</string>
    <string name="price">Rp.--</string>
    <string name="blank">Data belum tersedia</string>
    <string name="error">Error</string>

    <!-- Button Text -->
    <string name="see_photo_360">View 360</string>
    <string name="booking_now">Sewa Sekarang</string>
    <string name="cancel">Batal</string>
    <string name="denied">Tolak</string>
    <string name="accept">Setujui</string>
    <string name="booking">Sewa</string>
    <string name="change_password">Ubah Password</string>
    <string name="add_admin">Tambah Admin</string>
    <string name="logout">Logout</string>
    <string name="cancel_booking">Batalkan Sewa</string>
    <string name="add">Tambah</string>
    <string name="change">Ubah</string>
    <string name="delete">Hapus</string>
    <string name="see_payment">Lihat Cara Bayar</string>
    <string name="select_photo">Pilih Foto</string>

    <!-- Heading text -->
    <string name="register">Daftar</string>
    <string name="login">Login</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_field">Tambah Lapangan</string>
    <string name="change_field">Ubah Lapangan</string>


    <!-- Label text -->
    <string name="name">Nama</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Ulangi Password</string>
    <string name="profile_photo">Foto Profil</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="new_password_repeat">Ulangi Password Baru</string>
    <string name="booking_date">Tanggal sewa</string>
    <string name="booker">Penyewa</string>
    <string name="field_name">Nama lapangan</string>
    <string name="select_start_at">Pilih jam mulai</string>
    <string name="select_end_at">Pilih jam selesai</string>
    <string name="start_at">Jam mulai</string>
    <string name="end_at">Jam selesai</string>
    <string name="long_of_booking">Lama sewa</string>
    <string name="booking_price_perhour">Harga sewa perjam</string>
    <string name="booking_price">Biaya sewa</string>
    <string name="discon">Diskon</string>
    <string name="price_total">Total biaya sewa</string>
    <string name="your_transaction">Transaksi Kamu</string>
    <string name="success">sukses</string>
    <string name="pending">pending</string>
    <string name="failed">gagal</string>
    <string name="description">Deskripsi</string>
    <string name="field_photo">Foto Lapangan</string>
    <string name="field_360">Foto 360</string>
    <string name="link_field_360">Link Google Street 360</string>


    <!-- Link text -->
    <string name="to_login">Sudah punya akun?</string>
    <string name="to_register">Belum punya akun?</string>

    <!-- Button small text -->
    <string name="edit_account">Ubah data akun</string>


</resources>