<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bsc_bandarlampungsportcenter.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_field"
        android:name="com.bsc_bandarlampungsportcenter.ui.FieldFragment"
        android:label="@string/title_field"
        tools:layout="@layout/fragment_field" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.bsc_bandarlampungsportcenter.ui.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.bsc_bandarlampungsportcenter.ui.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>