<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <LinearLayout
        style="@style/base_container_linearlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp">

        <TextView
            style="@style/heading"
            android:text="@string/edit_profile"/>

        <TextView
            style="@style/label"
            android:text="@string/name"
            android:layout_marginTop="0dp"/>

        <EditText
            android:id="@+id/name"
            style="@style/input_text"
            android:hint="@string/name" />

        <TextView
            android:id="@+id/error_name"
            style="@style/error_text"/>

        <TextView
            style="@style/label"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/username"
            style="@style/input_text"
            android:hint="@string/username" />

        <TextView
            android:id="@+id/error_username"
            style="@style/error_text"/>

        <TextView
            style="@style/label"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/email"
            style="@style/input_email"
            android:hint="@string/email" />

        <TextView
            android:id="@+id/error_email"
            style="@style/error_text"/>

        <Button
            android:id="@+id/btn_edit_profile"
            style="@style/button_primary"
            android:layout_width="match_parent"
            android:text="@string/change"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>