<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        style="@style/base_container_linearlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp">

        <TextView
            style="@style/heading"
            android:text="@string/change_password"/>

        <TextView
            style="@style/label"
            android:text="@string/old_password"/>

        <EditText
            android:id="@+id/old_password"
            style="@style/input_password"
            android:hint="@string/old_password" />

        <TextView
            android:id="@+id/error_old_password"
            style="@style/error_text"/>

        <TextView
            style="@style/label"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/new_password"
            style="@style/input_password"
            android:hint="@string/new_password_repeat" />

        <TextView
            android:id="@+id/error_new_password"
            style="@style/error_text"/>

        <TextView
            style="@style/label"
            android:text="@string/new_password_repeat"/>

        <EditText
            android:id="@+id/new_password_repeat"
            style="@style/input_password"
            android:hint="@string/new_password_repeat" />

        <TextView
            android:id="@+id/error_new_password_repeat"
            style="@style/error_text"/>

        <Button
            android:id="@+id/btn_change_password"
            style="@style/button_primary"
            android:layout_width="match_parent"
            android:text="@string/change"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>