<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <LinearLayout
        style="@style/base_container_linearlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp">

        <TextView
            style="@style/heading"
            android:text="@string/login"/>

        <TextView
            style="@style/label"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/email"
            style="@style/input_email"
            android:hint="@string/email" />

        <TextView
            style="@style/label"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/password"
            style="@style/input_password"
            android:hint="@string/password" />

        <Button
            android:id="@+id/btn_login"
            style="@style/button_primary"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/to_register"
            style="@style/link_text"
            android:text="@string/to_register"
            android:textAlignment="center"/>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>