<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FieldBookingActivity"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="@dimen/padding_horizontal_content"
        android:scrollbars="none">

        <LinearLayout
            style="@style/base_container_linearlayout">

            <androidx.cardview.widget.CardView
                style="@style/card_for_image_view">
                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hero"
                    android:contentDescription="@string/app_name"
                    android:adjustViewBounds="true"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ID"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/photo_360"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ID"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/name"
                style="@style/section_title"
                android:text="@string/bsc"/>

            <TextView
                android:id="@+id/price_money"
                style="@style/link_text"
                android:text="Rp. -- / jam"/>

            <TextView
                style="@style/section_title"
                android:text="@string/booking_field"
                android:layout_marginTop="7dp"/>

            <TextView
                android:id="@+id/for_today_booking"
                style="@style/section_title"
                android:text="Penyewaan untuk hari ini,"
                android:textSize="14dp"
                android:layout_marginTop="7dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="@string/select_start_at"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="0dp"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/start_at"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:spinnerMode="dialog"
                    android:layout_alignParentEnd="true"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:theme="@style/Spinner"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="@string/select_end_at"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="0dp"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/end_at"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:spinnerMode="dialog"
                    android:layout_alignParentEnd="true"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:theme="@style/Spinner"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="@string/long_of_booking"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="0dp"/>

                <TextView
                    android:id="@+id/long_of_booking"
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="0 jam"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/primary"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="0dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="@string/booking_price_perhour"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="0dp"/>

                <TextView
                    android:id="@+id/price_booking_perhour"
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="--"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/primary"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="0dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="@string/booking_price"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="0dp"/>

                <TextView
                    android:id="@+id/price_booking"
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="Rp. 0"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/primary"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="0dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="@string/discon"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="0dp"/>

                <TextView
                    android:id="@+id/discon"
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="Rp. 0"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/primary"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="0dp"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/primary"
                android:layout_marginVertical="6dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200dp">

                <TextView
                    style="@style/plain_text"
                    android:layout_width="wrap_content"
                    android:text="@string/price_total"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="0dp"/>

                <TextView
                    android:id="@+id/price_total"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Rp. 0"
                    android:textSize="12dp"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/primary"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="0dp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/button_primary_border"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btn_booking"
            style="@style/button_primary"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:text="@string/booking"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>